chore: collapsing loop looked buggy

--- a/packages/ui/core/src/assets/scss/ng-material-override.scss
+++ b/packages/ui/core/src/assets/scss/ng-material-override.scss
@@ -683,3 +683,7 @@ app-dashboard-container .mat-drawer {
 {
   fill:$body !important;
 }
+.mat-expansion-panel-content
+{
+  overflow:hidden !important;
+}
